--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "bunyan": "^1.4.0",
     "bunyan-logstash-tcp": "^0.3.4",
-    "bunyan-prettystream": "^0.1.3"
+    "bunyan-prettystream": "^0.1.3",
+    "effluent-logger": "git+https://github.com/oosidat/effluent-logger.git"
   },
   "devDependencies": {
     "jscs": "^1.13.1",
