--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "service-logging-streams",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Default streams for service-logging",
   "main": "index.js",
   "scripts": {
-    "test": "jshint . && jscs ."
+    "test": "eslint ."
   },
   "keywords": [
     "service",
@@ -14,13 +14,12 @@
   "license": "MIT",
   "repository": "https://github.com/dougmoscrop/service-logging-streams",
   "dependencies": {
-    "bunyan": "^1.4.0",
-    "bunyan-logstash-tcp": "^0.3.4",
-    "bunyan-prettystream": "^0.1.3",
+    "bunyan": "~1.5.1",
+    "bunyan-logstash-tcp": "~0.3.4",
+    "bunyan-prettystream": "~0.1.3",
     "effluent-logger": "git+https://github.com/oosidat/effluent-logger.git"
   },
   "devDependencies": {
-    "jscs": "^1.13.1",
-    "jshint": "^2.8.0"
+    "eslint": "^1.10.3"
   }
 }
